k8s-manifests/product-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: product-pod
spec:
  containers:
  - name: product
    image: adityadevops/productservice:latest
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 8080
  restartPolicy: Never
